unpackaged/main/default/objects/OW_task_request__c/fields/OW_household_id__c.field-meta.xml
<CustomField>
    <fullName>OW_household_id__c</fullName>
    <label>Household ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>