unpackaged/main/default/objects/OW_task_request__c/fields/OW_related_advice__c.field-meta.xml
<CustomField>
    <fullName>OW_related_advice__c</fullName>
    <description>related advice id</description>
    <label>Related advice</label>
    <length>18</length>
    <type>Text</type>
</CustomField>