unpackaged/main/default/objects/OW_task_request__c/fields/OW_related_loa__c.field-meta.xml
<CustomField>
    <fullName>OW_related_loa__c</fullName>
    <description>ID of related LOA record</description>
    <label>Related LOA</label>
    <length>18</length>
    <type>Text</type>
</CustomField>