unpackaged/main/default/objects/OW_task_request__c/fields/OW_related_mortgage_application__c.field-meta.xml
<CustomField>
    <fullName>OW_related_mortgage_application__c</fullName>
    <description>ID of related mortgage application.</description>
    <label>Related mortgage application</label>
    <length>18</length>
    <type>Text</type>
</CustomField>