unpackaged/main/default/objects/OW_task_request__c/fields/OW_related_opportunity__c.field-meta.xml
<CustomField>
    <fullName>OW_related_opportunity__c</fullName>
    <description>ID of related opportunity</description>
    <label>Related opportunity</label>
    <length>18</length>
    <type>Text</type>
</CustomField>