unpackaged/main/default/objects/OW_task_request__c/fields/OW_related_provider__c.field-meta.xml
<CustomField>
    <fullName>OW_related_provider__c</fullName>
    <description>ID of related provider</description>
    <label>Related provider</label>
    <length>18</length>
    <type>Text</type>
</CustomField>