unpackaged/main/default/objects/OW_task_request__c/fields/OW_target_start_date__c.field-meta.xml
<CustomField>
    <fullName>OW_target_start_date__c</fullName>
    <label>Target start date</label>
    <type>Date</type>
</CustomField>