unpackaged/main/default/objects/OW_task_request__c/fields/OW_task_type__c.field-meta.xml
<CustomField>
    <fullName>OW_task_type__c</fullName>
    <label>Task type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>