unpackaged/main/default/objects/OW_task_request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OW_task_type__c</columns>
    <columns>OW_what_id__c</columns>
    <columns>OW_household_id__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>